applications/scratch-4104871/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: scratch-4104871
  namespace: scratch

spec:
  replicas: 1

  selector:
    matchLabels:
      app: scratch-4104871

  template:
    metadata:
      labels:
        app: scratch-4104871

    spec:
      containers:
      - name: scratch-4104871
        image: scratch:latest

        ports:
        - containerPort: 80
