applications/scratch-4104871/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: scratch-4104871
  namespace: scratch

spec:
  selector:
    app: scratch-4104871

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
