applications/scratch-4104871/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: scratch-4104871
  namespace: scratch

spec:
  ingressClassName: traefik

  rules:
  - host: scratch-4104871.lab.local

    http:
      paths:
      - path: /

        pathType: Prefix

        backend:
          service:
            name: scratch-4104871

            port:
              number: 80
